Add course details
