# crypto-world-server/src/controllers/CourseController.ts
@@ -1,4 +1,4 @@
-import { BodyProp, Get, Post, Route, Request } from "tsoa";
+import { BodyProp, Get, Post, Route, Request, Path } from "tsoa";
 import { CourseRepository } from "../repository/CourseRepository";
 import { UserRepository } from "../repository/UserRepository";
 
@@ -40,7 +40,18 @@ export default class CourseController {
   @Get("/cart")
   public async getCoursesFromCart(@Request() req: any) {
     let result = await CourseRepository.getCoursesFromCart(req.user.id);
-    console.log(result);
+    return result;
+  }
+
+  @Get("/my-courses")
+  public async getMyCourses(@Request() req: any) {
+    let result = await CourseRepository.getMyCourses(req.user.id);
+    return result;
+  }
+
+  @Get("/course-file/{course_id}")
+  public async getCourseFile(@Path('course_id') course_id: string) {
+    let result = await CourseRepository.getCourseFiles(course_id);
     return result;
   }
 }
